# FDF

./: 42.fdf  CMakeLists.txt  Makefile  README.md  cube.fdf  elem-fract.fdf  mars.fdf
includes/: fdf.h  graphic.h  validator.h
libft/: CMakeLists.txt  Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/: free_2d_mas.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_count_char.c  ft_error.c  ft_get_number.c  ft_is_whitespace.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_list_size.c  ft_longtoa_base.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstprint.c  ft_lstprintone.c  ft_memalloc.c  ft_memalloc_chr.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memjoin.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  (+45 more)
libft/srcs/ft_printf/: add_0_for_numstr.c  author  b_options.c  bigintsum_toa.c  cast_signed.c  cast_unsigned.c  conv_to_strnum.c  conversion.c  count_digits.c  e_format.c  f_b.c  f_c.c  f_feg.c  f_format.c  f_pdioux.c  f_s.c  find_flags.c  flags.c  ft_fprintf.c  ft_printf.c  g_format.c  get_exp_count.c  get_float_params.c  get_format_number1.c  get_format_number2.c  number_format.c  pow_bignum_toa.c  precision.c  round_number.c  set_color.c  size_mode.c  width.c
srcs/: do_operation.c  drawLine.c  draw_line.c  draw_map.c  first_init_transform_matrices.c  fps.c  get_color.c  get_copy_map.c  help_function.c  help_instructions.c  init_functions.c  init_mas_local.c  init_matrixes.c  line_clip_and_draw.c  main.c  mult_matrix4x4.c  paint_rainbow_image.c  put_pixel_to_image.c
srcs/graphic_functions/: main.c  matrix_operations.c  other_tr_matrixes.c  polygon_draw.c  tr_rotate.c  tr_rotate2.c
srcs/init_matrixes/: init_m0.c  init_m1.c
srcs/map_validator/: is_delimiter.c  read_fdf_map.c  validation.c  validation_new.c
srcs/matrix_functions/: matrix_operations.c  other_tr_matrixes.c  projections.c  tr_rotate.c  tr_rotate2.c
srcs/new/: dpoint_list_operations.c  draw_map.c  init_mas_local.c  intersection.c  line_clip_and_draw.c  projections.c
test_maps/: mars.fdf
